Makes search options more consistent
Signed-off-by: Christopher Grote <cmgrote@users.noreply.github.com>